test/errors/div_zero.correct
error: div_zero.li:3:11: cannot divide by zero
│ print(1 / 0);
│           ~
│           ^
error: div_zero.li:4:11: cannot divide by zero
│ print(1 % 0);
│           ~
│           ^
